force-app/main/default/objects/Public_File__c/fields/File_Identifier__c.field-meta.xml
<CustomField>
    <fullName>File_Identifier__c</fullName>
    <label>File Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>