force-app/main/default/objects/Public_File__c/fields/Original_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_File_Name__c</fullName>
    <label>Original File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>