force-app/main/default/objects/Public_File__c/fields/Sharing_URL__c.field-meta.xml
<CustomField>
    <fullName>Sharing_URL__c</fullName>
    <label>Sharing URL</label>
    <type>Url</type>
</CustomField>